# real-world

./: .gitmodules  LICENSE
computer-graphics/csharp-wpf/Hello/: Hello.sln
computer-graphics/csharp-wpf/Hello/Hello/: Hello.csproj  MainWindow.xaml  MainWindow.xaml.cs
computer-graphics/csharp-wpf/Hello/Hello/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
rust/: .gitignore  Cargo.toml  build.rs
rust/assets/shaders/: 1.frag
rust/lib/gl/: Cargo.toml  build.rs
rust/lib/gl/src/: lib.rs
rust/src/: main.rs  render_gl.rs  resources.rs
