[package]
name = "rust"
version = "0.1.0"
authors = ["Itsusinn奕䜣 <itsusinn@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.34.3", features = ["bundled", "static-link"] }
gl = { path = "lib/gl" }
walkdir = "2.3.1"

[build-dependencies]
walkdir = "2.3.1"

[features]
gl_debug = ["gl/debug"]
